[package]
name = "memos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
libsql-client = "0.31.0"
prost = "0.12.3"
prost-types = "0.12.3"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.0"
shuttle-turso = "0.35.0"
sm3 = "0.4.2"
snafu = "0.7.5"
tokio = "1.26.0"
tracing = "0.1.40"
tonic = "0.10.2"
tonic-web = "0.10.2"
awc = "3.2.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-sessions = "0.7.0"
pin-project = "1.1.3"
async-trait = "0.1.74"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
proto-builder-trait = { git = "https://github.com/thlstsul/proto-builder-trait.git", branch = "thlstsul-patch-1", default-features = false, features = ["tonic"] }
tonic-build = "0.10.2"
