[package]
name = "memos"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.0", features = ["multipart"]}
hex = "0.4.3"
hyper = { version = "0.14", features = ["server", "http1"] }
libsql-client = "0.31.0"
prost = "0.12.3"
prost-types = "0.12.3"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
shuttle-turso = "0.36.0"
sm3 = "0.4.2"
snafu = "0.7.5"
tokio = "1.26.0"
tracing = "0.1.40"
tonic = "0.10.2"
tonic-web = "0.10.2"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
pin-project = "1.1.3"
async-trait = "0.1.74"
axum-login = "0.9.0"
pin-project-lite = "0.2.13"
bytes = "1.5.0"
tower-cookies = "0.9.0"
syn = { version = "2.0.43", features = ["full", "extra-traits"] }
comrak = { version = "0.20.0", default-features = false, features = ["syntect"] }
regex = "1.10.2"
rmp-serde = "1.1.2"
time = "0.3.31"
futures-util = "0.3.30"
tokio-util = "0.7.10"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
proto-builder-trait = { git = "https://github.com/thlstsul/proto-builder-trait.git", branch = "thlstsul-patch-1", default-features = false, features = ["tonic"] }
tonic-build = "0.10.2"
