[package]
name = "memos"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"]}
hex = "0.4.3"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
libsql = "0.6"
prost = "0.13"
prost-types = "0.13"
serde = "1"
serde_json = "1"
shuttle-runtime = "0.50"
shuttle-turso = "0.50"
sm3 = "0.4.2"
snafu = "0.8"
tokio = "1.39"
tracing = "0.1"
tonic = "0.12"
tonic-web = "0.12"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs", "trace"] }
pin-project = "1.1"
async-trait = "0.1"
axum-login = "0.15"
pin-project-lite = "0.2"
bytes = "1.6"
tower-cookies = "0.10"
syn = { version = "2", features = ["full", "extra-traits"] }
regex = "1.10"
rmp-serde = "1.3"
time = "0.3"
image = "0.25"
tokio-util = "0.7"
nanoid = "0.4"
comrak = { version = "0.26", default-features = false, features = ["syntect"] }
futures = "0.3"
http-body = "1"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
proto-builder-trait = "0.6.2"
tonic-build = "0.12"
